# localize_xcode

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  Localizable.xcstrings  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml
src/: main.py
src/localize_xcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
